<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="my_app_name">Util</string>

    <string name="author">Blankj</string>
    <string name="demo_of_android_util_code">Demo of AndroidUtilCode</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="git_hub">GitHub</string>
    <string name="blog">Blog</string>

    <string name="demo_activity">ActivityUtils Demo</string>
    <string name="demo_app">AppUtils Demo</string>
    <string name="demo_bar">BarUtils Demo</string>
    <string name="demo_clean">CleanUtils Demo</string>
    <string name="demo_crash">CrashUtils Demo</string>
    <string name="demo_device">DeviceUtils Demo</string>
    <string name="demo_fragment">FragmentUtils Demo</string>
    <string name="demo_flashlight">FlashlightUtils Demo</string>
    <string name="demo_image">ImageUtils Demo</string>
    <string name="demo_keyboard">KeyboardUtils Demo</string>
    <string name="demo_location">LocationUtils Demo</string>
    <string name="demo_log">LogUtils Demo</string>
    <string name="demo_network">NetworkUtils Demo</string>
    <string name="demo_permission">PermissionUtils Demo</string>
    <string name="demo_phone">PhoneUtils Demo</string>
    <string name="demo_pinyin">PinyinUtils Demo</string>
    <string name="demo_process">ProcessUtils Demo</string>
    <string name="demo_sdcard">SDCardUtils Demo</string>
    <string name="demo_snackbar">SnackbarUtils Demo</string>
    <string name="demo_span">SpanUtils Demo</string>
    <string name="demo_toast">ToastUtils Demo</string>

    <!--Activity相关-->
    <string name="activity_start_imageActivity">Start ImageActivity</string>

    <!--App相关-->
    <string name="app_install">Install Test App</string>
    <string name="app_install_tips">Test app have installed</string>
    <string name="app_install_silent">Install Test App Silently</string>
    <string name="install_successfully">Install successfully</string>
    <string name="install_unsuccessfully">Install unsuccessfully</string>
    <string name="app_uninstall">Uninstall Test App</string>
    <string name="app_uninstall_tips">Please install test app first</string>
    <string name="app_uninstall_silent">Uninstall App Silently</string>
    <string name="uninstall_successfully">Uninstall successfully</string>
    <string name="uninstall_unsuccessfully">Uninstall unsuccessfully</string>
    <string name="app_launch">Launch App</string>
    <string name="app_get_details_settings">Get App Details Settings</string>

    <!--Bar相关-->
    <string name="bar_about_status_bar">About Status Bar</string>
    <string name="bar_about_nav_bar">About Nav Bar</string>

    <string name="bar_status_set_color">Set Color</string>
    <string name="bar_status_set_alpha">Set Alpha</string>
    <string name="bar_status_set_image_view">Set Image View</string>
    <string name="bar_status_set_fragment">Set Fragment</string>
    <string name="bar_status_set_swipe_back">Set Swipe Back</string>
    <string name="bar_status_set_drawer">Set Drawer</string>
    <string name="bar_status_random_color">Random Color</string>
    <string name="bar_status_set_transparent">Set Transparent</string>
    <string name="bar_status_title_color">Color</string>
    <string name="bar_status_title_alpha">Alpha</string>
    <string name="bar_status_is_front">Front</string>
    <string name="bar_status_title_image_view">Image</string>

    <string name="bar_nav_about">About Nav</string>

    <!--Device相关-->
    <string name="device_shutdown">Shutdown</string>
    <string name="device_reboot">Reboot</string>
    <string name="device_reboot_to_recovery">Reboot To Recovery</string>
    <string name="device_reboot_to_bootloader">Reboot To Bootloader</string>

    <!--Flashlight相关-->
    <string name="flashlight_open">Open Flashlight</string>
    <string name="flashlight_close">Close Flashlight</string>

    <!--Fragment相关-->
    <string name="fragment_show_stack">Show Stack</string>
    <string name="fragment_add_demo1_hide">Add Demo1 Hide</string>
    <string name="fragment_add_demo1_show">Add Demo1 Show</string>
    <string name="fragment_add_child">Add Child</string>
    <string name="fragment_pop">Pop</string>
    <string name="fragment_pop_to_root">Pop To Root</string>
    <string name="fragment_pop_add">Pop Add</string>
    <string name="fragment_hide_demo0_show_demo1">Hide Demo0 Show Demo1</string>
    <string name="fragment_hide_demo1_show_demo0">Hide Demo1 Show Demo0</string>
    <string name="fragment_replace">Replace</string>
    <string name="fragment_transition">Transition</string>

    <!--Handler相关-->
    <string name="handler_send_msg_after_3s">Send Msg After 3s</string>
    <string name="handler_received_msg">Received Message</string>


    <!--Network相关-->
    <string name="network_open_wireless_settings">Open Wireless Settings</string>
    <string name="network_set_data_enabled">Set Data Enabled</string>
    <string name="network_set_wifi_enabled">Set Wifi Enabled</string>

    <!--Keyboard相关-->
    <string name="keyboard_hide_soft_input">Hide Soft Input</string>
    <string name="keyboard_show_soft_input">Show Soft Input</string>
    <string name="keyboard_toggle_soft_input">Toggle Soft Input</string>
    <string name="keyboard_in_dialog">Keyboard In Dialog</string>
    <string name="keyboard_close_dialog">Close Dialog</string>

    <!-- log -->
    <string name="log_toggle_log">Toggle Log</string>
    <string name="log_toggle_console">Toggle Console</string>
    <string name="log_toggle_tag">Toggle Tag</string>
    <string name="log_toggle_head">Toggle Head</string>
    <string name="log_toggle_border">Toggle Border</string>
    <string name="log_toggle_console_filter">Toggle Console Filter</string>
    <string name="log_toggle_file_filter">Toggle File Filter</string>
    <string name="log_toggle_file">Toggle File</string>
    <string name="log_toggle_dir">Toggle Dir</string>
    <string name="log_with_no_tag">Log With No Tag</string>
    <string name="log_with_tag">Log With Tag</string>
    <string name="log_in_new_thread">Log In New Thread</string>
    <string name="log_null">Log Null</string>
    <string name="log_many_params">Log Many Params</string>
    <string name="log_long_string">Log Long String</string>
    <string name="log_to_file">Log To File</string>
    <string name="log_json">Log Json</string>
    <string name="log_xml">Log Xml</string>

    <!--Phone相关-->
    <string name="phone_dial">Dial</string>
    <string name="phone_call">Call</string>
    <string name="phone_send_sms">Send SMS</string>
    <string name="phone_send_sms_silent">Send SMS Silent</string>

    <!--Process相关-->
    <string name="process_kill_all_background">Kill All Background Processes</string>

    <!--SnackBar相关工具类-->
    <string name="snackbar_show_short">Show Short Snackbar</string>
    <string name="snackbar_show_short_with_action">Show Short Snackbar With Action</string>
    <string name="snackbar_show_long">Show Long Snackbar</string>
    <string name="snackbar_show_long_with_action">Show Long Snackbar With Action</string>
    <string name="snackbar_show_indefinite">Show Indefinite Snackbar</string>
    <string name="snackbar_show_indefinite_with_action">Show Indefinite Snackbar With Action</string>
    <string name="snackbar_add_view">Add View</string>
    <string name="snackbar_add_view_with_action">Add View With Action</string>
    <string name="snackbar_show_success">Show Success</string>
    <string name="snackbar_show_warning">Show Warning</string>
    <string name="snackbar_show_error">Show Error</string>
    <string name="snackbar_dismiss">Dismiss Snackbar</string>
    <string name="snackbar_short">Short Snackbar</string>
    <string name="snackbar_long">Long Snackbar</string>
    <string name="snackbar_indefinite">Indefinite Snackbar</string>
    <string name="snackbar_click">Click</string>
    <string name="snackbar_custom_view">Custom View</string>
    <string name="snackbar_success">Success</string>
    <string name="snackbar_warning">Warning</string>
    <string name="snackbar_error">Error</string>

    <!--Toast相关-->
    <string name="toast_show_short_safe">Show Short Safe</string>
    <string name="toast_show_short">Show Short</string>
    <string name="toast_show_long_safe">Show Long Safe</string>
    <string name="toast_show_long">Show Long</string>
    <string name="toast_show_green_font">Show Green Font</string>
    <string name="toast_show_custom_bg">Show Custom Bg</string>
    <string name="toast_show_span">Show Span</string>
    <string name="toast_show_custom_view">Show Custom View</string>
    <string name="toast_custom_view">Custom View</string>
    <string name="toast_show_middle">Show Middle</string>
    <string name="toast_cancel">Cancel</string>

    <string name="toast_short_safe">Short Safe</string>
    <string name="toast_short">Short</string>
    <string name="toast_long_safe">Long Safe</string>
    <string name="toast_long">Long</string>
    <string name="toast_green_font">Green Font</string>
    <string name="toast_custom_bg">Custom Bg</string>
    <string name="toast_span">Span</string>
    <string name="toast_middle">Middle</string>
</resources>
