<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/spacing_16">

        <TextView
            android:id="@+id/tv_about_fragment"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_show_about_fragment"
            style="@style/WideBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_show_stack"/>

        <Button
            android:id="@+id/btn_pop"
            style="@style/WideBtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_pop"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lena"
            android:transitionName="@string/fragment_transition"
            tools:targetApi="lollipop"/>

    </LinearLayout>


</ScrollView>
